--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Report Creator",
-  "version": "0.1.0",
+  "name": "Report_Creator",
+  "version": "0.8",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
